--- a/StarTEDApp/appsettings.json
+++ b/StarTEDApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "StarTEDDb": "Server=localhost;Database=StarTED;Trusted_Connection=true;MultipleActiveResultSets=true;encrypt=false"
+  }
 }
